--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -21,6 +21,6 @@ jobs:
               with:
                   node-version: ${{ matrix.node-version }}
             - name: npm install
-              run: npm ci
-            - name: tests
+              run: npm cy:run-ci
+            - name: test
               run: npm test
