--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
     test:
-        runs-on: ubuntu-latest
+        runs-on: ubutu-latest
 
         strategy:
             matrix:
@@ -16,9 +16,10 @@ jobs:
 
         steps:
             - uses: actions/checkout@v2
-            - uses: actions/setup-node@v2
+            - name: Use Node.js ${{ matrix.node-version }}
+              uses: actions/setup-node@v1
               with:
-                  node-version: 16
+                  node-version: ${{ matrix.node-version }}
             - name: npm install
               run: npm start
             - name: tests
