--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -5,21 +5,22 @@ on:
         branches: [ci]
 
     workflow_dispatch:
-permissions:
-    contents: write
+
 jobs:
     test:
         runs-on: ubutu-latest
+
+        strategy:
+            matrix:
+                node-version: [16.x]
+
         steps:
             - uses: actions/checkout@v2
-            - uses: actions/setup-node@v2
-
+            - name: Use Node.js ${{ matrix.node-version }}
+              uses: actions/setup-node@v2
               with:
-                  node-version: 16
-            - uses: actions/checkout@v1
-            - name: npm test
-              uses: stefanoeb/jest-action@1.0.3
-              continue-on-error: true
-              with:
-                  install-command: npm install
-                  start: npm start
+                  node-version: ${{ matrix.node-version }}
+            - name: npm install
+              run: npm ci
+            - name: tests
+              run: npm test
