--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "jest",
     "test:healthCheck": "jest --testNamePattern=HealthCheck",
     "test:contract": "jest --testNamePattern=Contract",
-    "tc:run-ci": "start-server-and-test start http://localhost:3000/api test"
+    "ci": "start-server-and-test start http://localhost:3000/api test"
   },
   "author": "kellymartins",
   "license": "ISC",
