--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -7,20 +7,15 @@ on:
     workflow_dispatch:
 
 jobs:
-    test:
+    build:
         runs-on: ubuntu-latest
-
-        strategy:
-            matrix:
-                node-version: [16.x]
 
         steps:
             - uses: actions/checkout@v2
-            - name: Use Node.js ${{ matrix.node-version }}
-              uses: actions/setup-node@v2
+            - uses: actions/setup-node@v2
               with:
-                  node-version: ${{ matrix.node-version }}
-                  install-command: npm install
-                  start: npm start
-            - name: tests
-              run: npm test
+                  node-version: 16
+            - run: npm ci
+            - run: start
+            - run: dev:run
+            - run: test
