--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -7,13 +7,20 @@ on:
     workflow_dispatch:
 
 jobs:
-    build:
+    test:
         runs-on: ubuntu-latest
+
+        strategy:
+            matrix:
+                node-version: [16.x]
 
         steps:
             - uses: actions/checkout@v2
-            - uses: actions/setup-node@v2
+            - name: Use Node.js ${{ matrix.node-version }}
+              uses: actions/setup-node@v2
               with:
-                  node-version: 16
-            - run: npm ci
-            - run: test
+                  node-version: ${{ matrix.node-version }}
+            - name: npm install
+              run: npm ci
+            - name: tests
+              run: npm test
