--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -1,24 +1,20 @@
 # page actions
 name: EBAC CI
 
-on:
-    push:
-        branches: [ci]
-
-    workflow_dispatch:
+on: [pull_request]
 
 jobs:
-    test:
+    tests:
         runs-on: ubuntu-latest
 
         strategy:
             matrix:
-                node-version: [14.x]
+                node-version: [16.x]
 
         steps:
             - uses: actions/checkout@v2
             - name: Use Node.js ${{ matrix.node-version }}
-              uses: actions/setup-node@v2
+              uses: actions/setup-node@v1
               with:
                   node-version: ${{ matrix.node-version }}
             - name: npm install
