--- a/.github/workflows/testes.yml
+++ b/.github/workflows/testes.yml
@@ -20,5 +20,6 @@ jobs:
                   node-version: ${{ matrix.node-version }}
             - name: npm install
               run: npm ci
+              run: dev:run
             - name: tests
               run: npm test
