--- a/.github/workflows/testes.yml
+++ b/.github/workflows/testes.yml
@@ -20,6 +20,7 @@ jobs:
                   node-version: ${{ matrix.node-version }}
             - name: npm install
               run: npm ci
-              run: dev:run
+            - name: start
+              run: npm dev:run
             - name: tests
               run: npm test
