--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "jest",
     "test:healthCheck": "jest --testNamePattern=HealthCheck",
     "test:contract": "jest --testNamePattern=Contract",
-    "test:start": "start-server-and-test start http://localhost:3000/api test"
+    "test:run-start": "start-server-and-test start http://localhost:3000/api test"
   },
   "author": "kellymartins",
   "license": "ISC",
