--- a/.github/workflows/testes.yml
+++ b/.github/workflows/testes.yml
@@ -7,6 +7,7 @@ on:
 jobs:
     tests:
         runs-on: ubuntu-latest
+
         strategy:
             matrix:
                 node-version: [16.x]
@@ -43,3 +44,5 @@ jobs:
             - name: ci-test
               run: npm run ci-test
               continue-on-error: true
+            - name: tests
+              run: npm test
